--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "lodash.min": "^4.0.0",
     "lodash.pluck": "^3.1.2",
     "lodash.reduce": "^4.3.0",
+    "prop-types": "^15.6.0",
     "simpleheat": "^0.4.0"
   }
 }
